--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: 2.0.0+3
+  sqflite: ^2.0.0+4
   path_provider: 2.0.1
   intl: 0.17.0
   flutter_staggered_grid_view: 0.4.0
@@ -38,6 +38,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  camera_camera: ^2.0.2
 
 dev_dependencies:
   flutter_test:
