--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,12 +33,17 @@ dependencies:
   path_provider: 2.0.1
   intl: 0.17.0
   flutter_staggered_grid_view: 0.4.0
+  notes_buddy_api_client:
+    path: /Users/sithira/Documents/SLIIT-MSC/EM/notes_buddy/api_client
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   camera_camera: ^2.0.2
+  share_plus: ^3.0.2
+  connectivity: ^3.0.6
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
