--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -42,8 +42,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   camera_camera: ^2.0.2
   share_plus: ^3.0.2
-  connectivity: ^3.0.6
-  provider: ^6.0.1
+  connectivity_plus: ^2.0.2
 
 dev_dependencies:
   flutter_test:
