--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,10 +2,20 @@ server:
   port: 3000
 
 spring:
+  servlet:
+    multipart:
+      location: "./uploads"
   datasource:
     url: jdbc:mysql://localhost:3306/notes_buddy
     username: root
     password: root
+  jpa:
+    hibernate:
+      ddl-auto: update
 app:
   jwtSecret: "fdsfsdfsdf"
   jwtExpirationInMs: 3000
+
+logging:
+  level:
+    root: debug
